# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  demo.cast  demo_yml.cast  pyproject.toml  sonar-project.properties
.github/workflows/: test_ci.yaml
gendiff/: __init__.py
gendiff/engine/: generate_diff.py  parsers.py
gendiff/scripts/: gendiff.py
hexlet_code.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_gendiff.py  test_yaml.py
